--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,19 +2,24 @@
   "name": "registro_produccion-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
+    "axios": "^1.6.5",
+    "lucide-vue-next": "^0.563.0",
     "pinia": "^2.1.7",
-    "axios": "^1.6.5"
+    "sweetalert2": "^11.26.18",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^5.0.0",
+    "tailwindcss": "^4.1.18",
     "vite": "^5.0.0"
   }
 }
